@@ -2,6 +2,7 @@
 	- shuffle NS selection when getting nameserver target addresses.
 	- fixup of deadlock warnings, yield cpu in checklock code so that
 	  freebsd scheduler selects correct process to run.
+	- added identity and version config options and replies.
 
 18 July 2007: Wouter
 	- do not query addresses, 127.0.0.1, and ::1 by default.
